--- a/assets/w3.css
+++ b/assets/w3.css
@@ -230,6 +230,12 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-pale-red,.w3-hover-border-pale-red:hover{border-color:#ffe7e7!important}.w3-border-pale-green,.w3-hover-border-pale-green:hover{border-color:#e7ffe7!important}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
 /* custom*/
+.w3-fa-spin:hover{
+    -moz-animation: spin .8s 1 linear;
+    -o-animation: spin .8s 1 linear;
+    -webkit-animation: spin .8s 1 linear;
+    animation: spin .8s 1 linear;
+}
 .w3-animate-fading2{animation:fading 5s infinite}@keyframes fading{0%{opacity:0.5}50%{opacity:1}100%{opacity:0.5}}
 .w3-padded-box{margin-left:10%!important;margin-right:10%!important}
 .w3-cite{font-size:11px!important;font-style:italic!important}
@@ -239,4 +245,28 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
     bottom: 0;
     width: 100%;
     text-align: center;
+}
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(359deg); }
+}
+
+@-moz-keyframes spin {
+    0% { -moz-transform: rotate(0deg); }
+    100% { -moz-transform: rotate(359deg); }
+}
+
+@-o-keyframes spin {
+    0% { -o-transform: rotate(0deg); }
+    100% { -o-transform: rotate(359deg); }
+}
+
+@-ms-keyframes spin {
+    0% { -ms-transform: rotate(0deg); }
+    100% { -ms-transform: rotate(359deg); }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(359deg); }
 }
