--- a/assets/w3.css
+++ b/assets/w3.css
@@ -230,6 +230,9 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-pale-red,.w3-hover-border-pale-red:hover{border-color:#ffe7e7!important}.w3-border-pale-green,.w3-hover-border-pale-green:hover{border-color:#e7ffe7!important}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
 /* custom*/
+.fa-heart:hover{
+    color: deeppink !important;
+}
 .w3-fa-spin:hover{
     -moz-animation: spin .8s 1 linear;
     -o-animation: spin .8s 1 linear;
